--- a/TCPIP_Illustrate/2.3.md
+++ b/TCPIP_Illustrate/2.3.md
@@ -45,7 +45,13 @@ IID通常位为64位，并直接由一个网络接口相关的链路层MAC地址
 
 #### EUI-64
 
-EUI-64是
+EUI-64表示*扩展唯一标识符*，其开始于一个24位的**组织唯一标识符(OUI)，接着是一个由组织分配的40位*扩展标识符，*它由前面24位识别。
+
+多年来，很多IEEE标准兼容的网络接口在使用短格式的地址。OUI的长度是24位，并占据着EUI-48和EUI-64地址的前三个字节。第一个字节的低两位分别是u位和g位。当u位被设置时，表示该地址是本地管理。而g位被设置时，表示该地址时一组或组播类型的地址。
+
+EUI-64地址可以由EUI-48位地址形成。只需要将EUI-48的第四和第五位字节的十六位替换为(FFFE)，然后复制OUI和其余位。
+
+
 
 [^2]: 2.5.md
     
