--- a/TCPIP_Illustrate/2.5.md
+++ b/TCPIP_Illustrate/2.5.md
@@ -1,14 +1,60 @@
 # 2.5 特殊用途地址
 
-| 前缀           | 特殊用途                                                         | 参考文献 |
-| -------------- | ---------------------------------------------------------------- | -------- |
-| 0.0.0.0/8      | 本地网络中的主机。仅作为源IP地址的使用                           |          |
-| 10.0.0.0/8     | 专用网络(内联网)中的地址。这种地址不会出现在                     |          |
-| 127.0.0.0/8    | Internet 主机回送地址。通常只使用127.0.0.1                       |          |
-| 169.254.0.0/16 | “链路本地”地址，只用于一条链路，通常自动分配                   |          |
-| 172.16.0.0/12  | 专用网络(内联网)的地址。这种地址不会出现在公共Internet中         |          |
-| 192.0.0.0/24   | IETF协议分配(IANA保留)                                           |          |
-| 192.0.2.0/24   | 批准用于文档中的TEST-NET-1地址。这种地址不会出现在公共Internet中 |          |
-|                |                                                                  |          |
-|                |                                                                  |          |
-|                |                                                                  |          |
+| 前缀               | 特殊用途                                                         | 参考文献 |
+| ------------------ | ---------------------------------------------------------------- | -------- |
+| 0.0.0.0/8          | 本地网络中的主机。仅作为源IP地址的使用                           |          |
+| 10.0.0.0/8         | 专用网络(内联网)中的地址。这种地址不会出现在                     |          |
+| 127.0.0.0/8        | Internet 主机回送地址。通常只使用127.0.0.1                       |          |
+| 169.254.0.0/16     | “链路本地”地址，只用于一条链路，通常自动分配                   |          |
+| 172.16.0.0/12      | 专用网络(内联网)的地址。这种地址不会出现在公共Internet中         |          |
+| 192.0.0.0/24       | IETF协议分配(IANA保留)                                           |          |
+| 192.0.2.0/24       | 批准用于文档中的TEST-NET-1地址。这种地址不会出现在公共Internet中 |          |
+| 198.88.99.0/24     | 用于6to4中继(任播地址)                                           |          |
+| 192.168.0.0/16     | 专用网络(内联网)地址。这种地址不会出现在公共Internet中           |          |
+| 198.18.0.0/15      | 用于基准和性能测试                                               |          |
+| 198.51.100.0/24    | TEST-NET-2地址。被用于文档中                                     |          |
+| 198.51.100.0/24    | TEST-NET-3地址。被用于文档中                                     |          |
+| 224.0.0.0/4        | IPv4组播地址(以前的D类)，仅作为目的IP地址使用                    |          |
+| 240.0.0.0/4        | 保留空间(以前的E类)，除了255.255.255.255                         |          |
+| 255.255.255.255/32 | 本地网络(受限的)广播地址                                         |          |
+
+IPv6中的特殊用途地址：
+
+| 前缀                | 特殊用途                                                          | 参考文献 |
+| ------------------- | ----------------------------------------------------------------- | -------- |
+| ::/0                | 默认路由条目。不用于寻址                                          |          |
+| ::/128              | 未指定地址，可作为源IP地址使用                                    |          |
+| ::1/128             | IPv6主机回送地址，不用于发出本地主机的数据报中                    |          |
+| ::ffff:0:0/96       | IPv4映射地址。这种地址不会出现在分组头部，只用于主机内部          |          |
+| ::{ipv4-address}/96 | IPv4兼容地址。已过时，未使用                                      |          |
+| 2001::/32           | Teredo地址                                                        |          |
+| 2001:10::/28        | ORCHI(可覆盖路由加密散列标识符)。这种地址不会出现在公共Internet中 |          |
+| 2001:db8::/32       | 用于文档和实例的地址范围。这种地址不会出现在公共Internet中        |          |
+| 2002::/16           | 6to4隧道中继的6to4地址                                            |          |
+| 3ffe::/16           | 用于6bone实验，已弃用                                             |          |
+| 5f00::/16           | 用于6bone实验，已弃用                                             |          |
+| fc00::/7            | 唯一的本地单播地址，不用于全球性的Internet                        |          |
+| fe80::/10           | 链路本地单播地址                                                  |          |
+| ff00::/8            | IPv6组播地址，仅作为目的IP地址使用                                |          |
+
+### IPv4/IPv6地址转换
+
+在有些网络之中，可能需要进行IPv4/IPv6地址转换，目前已经制定了一套用于单播转换的框架[RFC6144]，以及一个正在开发的用于组播地址的转换方案[ID v 4v6mc]。一个基本功能是**提供自动、基于算法的地址转换**。
+
+*嵌入IPv4的IPv6地址*
+
+在IPv6中嵌入IPv4地址，一共有六种格式来进行编码，但是IPv6的前缀长度必须是32、40、48、56、64、96者六个之一。
+
+### 组播地址
+
+v4和v6支持组播寻址，一个IP组播标识一组主机接口，而不是单个接口。一般来说，一个组可以跨越整个Internet。一个组所覆盖的网络部分成为该组的**范围**。常见的范围包括*节点本地，链路本地，站点本地，全球和管理*。
+
+管理员可以将路由器设置为管理范围边界，这样相关组的组播流量就不会被路由器所转发(站点本地和管理范围只在组播寻址时有效)。
+
+在软件的控制下，每个Internet主机中的协议栈能加入或者离开一个组播组。当一台主机向一个组发送数据时，它会创建一个数据报
+
+### IPv4组播地址
+
+对于IPv4，D类空间已被保留支持组播。有28位空闲意味着可以提供$2^{28}$个主机组
+
+用于支持组播的IPv4的D类地址空间的主要部分：
