--- a/TCPIP_Illustrate/2.5.md
+++ b/TCPIP_Illustrate/2.5.md
@@ -117,3 +117,21 @@ IPv6范围字段的值：
 | ff0e::101 | Internet中的所有NTP服务器         |
 
 **在IPv6中，当P和R位字段设置为0时，使用下图给出的组播地址格式。当P设置为1时，无须基本每个组的全球性许可，对组播地址有两个可选方法**
+
+
+1. *基于单播前缀的IPv6组播地址分配*，由ISP或地址分配机构提供单播前缀分配。
+2. *链路范围的IPv6组播*，使用接口标识符，并且组播地址是基于主机的IID。
+
+IPv6组播地址标志：
+
+| 段字位 |                    含义                    | 参考文献 |
+| :----: | :----------------------------------------: | -------- |
+|   R   |    会合点标志(0：常规的，1：包括RP地址)    |          |
+|   P   | 前缀标志(0：常规的，1：基于单播前缀的地址) |          |
+|   T   |     临时标志(0：永久分配的，1：临时的)     |          |
+
+当T位字段被设置时，表示组地址是临时或者动态分配的；当P位字段被设置为1，T位必须也设置为1。(当这种情况发生时，使用基于单播地址前缀的特殊格式的IPv6组播地址)
+
+### 2.5.5 任播地址
+
+任播地址是一个单播IPv4和IPv6地址，这些地址根据它所在的网络不确定不同的主机。这是通过配置路由器通知Internet中多个站点有相同的单播路由来实现。因此，一个任播地址不是指Internet中的一台主机，而是对于任播地址“最合适”或“最接近”的一台主机。任播地址最常用于发现一台提供了常用服务的
