--- a/Computer_Architecture_And__Organization_Design/3.1.md
+++ b/Computer_Architecture_And__Organization_Design/3.1.md
@@ -40,17 +40,24 @@
   地址总线主要用来指出数据总线上的元数据或目的数据在主存单元的地址或I/O地址。单向传输总线。地址线的位数与存储单元的个数有关。(地址线为20根，对应的存储单位个数为$2^{20}$)
 - **控制总线**
   控制总线是用来发出各种控制信号的传输线。但是控制总线总体来说，可以认为是双向的。
-  **常见控制信号：**
-  | 控制     | 作用                                       |
-  | -------- | ------------------------------------------ |
-  | 时钟     | 用来同步各种操作                           |
-  | 复位     | 初始化所有操作                             |
-  | 总线请求 | 表示某个部件需要获得总线使用权             |
-  | 总线允许 | 表示需要获得                               |
-  | 中断请求 | 表示某个部件提出中断请求                   |
-  | 中断响应 | 表示某个中断请求已被接收                   |
-  | 存储读写 | 将数据总线上的数据写至存储器的指定地质单元 |
-  | 存储器读 | 将指定存储单元中的数据读到数据总线上 |
-  | I/O读 | 从指定的I/O端口将数据输出到指定的I/O端口内 |
-  | I/O写 | 将数据总线上的数据输出到指定I/O端口内 |
+  **常见控制信号：**| 控制     | 作用                                           |
+  | -------- | ---------------------------------------------- |
+  | 时钟     | 用来同步各种操作                               |
+  | 复位     | 初始化所有操作                                 |
+  | 总线请求 | 表示某个部件需要获得总线使用权                 |
+  | 总线允许 | 表示需要获得                                   |
+  | 中断请求 | 表示某个部件提出中断请求                       |
+  | 中断响应 | 表示某个中断请求已被接收                       |
+  | 存储读写 | 将数据总线上的数据写至存储器的指定地质单元     |
+  | 存储器读 | 将指定存储单元中的数据读到数据总线上           |
+  | I/O读    | 从指定的I/O端口将数据输出到指定的I/O端口内     |
+  | I/O写    | 将数据总线上的数据输出到指定I/O端口内          |
   | 传输相应 | 表示数据已被接收，或者已经将数据送至数据总线上 |
+
+### 通信总线
+
+通信总线用于计算机系统环境之间或计算机与其它系统之间的通信。
+
+串行通信是指数据在单条1位宽上的传输线上，一位一位地按顺序分时传送。
+
+并行通信是指数据在多条并行1位宽的传输线上，同时由源传输到
