modified the 3.1.md

--- a/Computer_Architecture_And__Organization_Design/3.1.md
+++ b/Computer_Architecture_And__Organization_Design/3.1.md
@@ -40,8 +40,9 @@
   地址总线主要用来指出数据总线上的元数据或目的数据在主存单元的地址或I/O地址。单向传输总线。地址线的位数与存储单元的个数有关。(地址线为20根，对应的存储单位个数为$2^{20}$)
 - **控制总线**
   控制总线是用来发出各种控制信号的传输线。但是控制总线总体来说，可以认为是双向的。
-  **常见控制信号：**| 控制     | 作用                                           |
-  | -------- | ---------------------------------------------- |
+  **常见控制信号：**
+ | 控制     | 作用                                           |
+ | -------- | ---------------------------------------------- |
   | 时钟     | 用来同步各种操作                               |
   | 复位     | 初始化所有操作                                 |
   | 总线请求 | 表示某个部件需要获得总线使用权                 |
