modified the 3.3.md

--- a/Computer_Architecture_And__Organization_Design/3.3.md
+++ b/Computer_Architecture_And__Organization_Design/3.3.md
@@ -17,9 +17,12 @@
 
 总线性能指标如下：
 
-- 总线宽度：
-- 总线带宽：
+- 总线宽度：根据总线的根数来确定，通常用bit(位)表示
+- 总线带宽：总线带宽可以理解为总线的数据传输速率，单位为Mbps，
+> 假设总线工作频率为33MHz,总线宽度为32位(4B)，则总线带宽为$33\times 32 \div 8=132Mbps$
 - 时钟同步/异步
 - 
 - 
--
+- 
+
+---
