--- a/Computer_Architecture_And__Organization_Design/3.3.md
+++ b/Computer_Architecture_And__Organization_Design/3.3.md
@@ -19,10 +19,36 @@
 
 - 总线宽度：根据总线的根数来确定，通常用bit(位)表示
 - 总线带宽：总线带宽可以理解为总线的数据传输速率，单位为Mbps，
+
 > 假设总线工作频率为33MHz,总线宽度为32位(4B)，则总线带宽为$33\times 32 \div 8=132Mbps$
-- 时钟同步/异步
-- 
-- 
-- 
+
+- **时钟同步/异步** 总线上的数据与时钟同步工作的总线称为*同步总线*，与时钟不同步工作的总线称为异步总线
+- **总线复用** 一条信号线上分时传送两种信号。为了提高总线的利用率，
+- **信号线数**  地址总线、数据总线和控制总线三组总线数总和
+- **总线控制方式**   包括突发工作、自动配置、仲裁方式、逻辑方式和仲裁方式等
 
 ---
+
+### 总线标准
+
+目前流行的总线标准有以下几种：
+
+1. ISA总线
+
+   > ISA总线是IBM为了采用全16位的CPU而推出的，又称AT总线，它使用独立于CPU总线时钟，因此CPU可以采用比总线频率更高的时钟，有利于CPU的性能提升。缺点是**不能支持多台主设备系统**，而且CPU花费了的大量时间来控制与外部交换数据。
+   > ISA总线数据
+   >
+   > - 时钟频率:8MHz
+   > - 最大传输速率:16Mbps
+   > - 数据线为16位，地址线为24位
+   >
+2. EISA总线
+
+   > EISA总线是在ISA基础上扩充开放的总线标准，与ISA可以完全兼容，从CPU中分离出了总线控制权，是一种具有智能化的总线，能够支持多个总线主控器和突发方式 *(总线上可以进行成块的数据传送)* 的传输
+   > EISA总线数据：
+   >
+   > - 总线时钟频率：8MHz
+   > - 最大传输速率：33MHz
+   > - 数组总线为32位，地址总线为32位，扩充DMA访问范围达$2^{32}$
+   >
+3. VESA(VL-BUS总线)
