add new chapter

--- a/Computer_Architecture_And__Organization_Design/3.3.md
+++ b/Computer_Architecture_And__Organization_Design/3.3.md
@@ -52,3 +52,23 @@
    > - 数组总线为32位，地址总线为32位，扩充DMA访问范围达$2^{32}$
    >
 3. VESA(VL-BUS总线)
+
+   > VESA总线是由VESA提出的局部总线标准，又称为VL-BUS总线。所谓的局部总线，是指在系统外为两个以上的模块提供的高速传输信息通道。VL-BUS是由CPU总线演化而来的，采用CPU的时钟频率达33MHz，数据线为32位，可通过扩展插槽扩展到64位，配有局部控制器，最大传输速率达到133MBps。通过局部总线控制器，将高速I/O设备直接挂载在CPU上，实现CPU与高速I/O设备之间的高速数据交换
+   >
+4. PCI总线
+   > PCI总线是目前使用最为广泛的总线架构，ISA总线与EISA总线由于受带宽的限制，已经不能适应系统工作的系统要求，反倒成为了整个系统的瓶颈，从而促使了总线技术的发展。Intel提出了PCI(Peripheral Compoment Interconnect)
+   > PCI的特点：
+   >
+   > 1. 高性能
+   > 2. 良好的兼容性
+   > 3. 支持即插即用
+   > 4. 支持多主设备能力
+   > 5. 具有与处理器和存储器子系统完全并行操作的能力
+   > 6. 提供数据和地址奇偶效验功能，保证了数据的完整和准确
+   > 7. 支持两种电压标准：5V和3.3V
+   > 8. 可扩充性好，当PCI总线驱动能力不足时，可以采用多层结构
+   > 9. 软件兼容性好
+   > 10. 采用多路复用技术，减少了总线引脚个数
+5. AGP总线
+一种专门用于三维图形加速诞生的架构采用点对点通道方式，以66.7MHz的频率直接与主存联系，以主存为帧缓冲器，实现高速存取。
+
