add new section

--- a/Computer_Architecture_And__Organization_Design/3.3.md
+++ b/Computer_Architecture_And__Organization_Design/3.3.md
@@ -56,6 +56,7 @@
    > VESA总线是由VESA提出的局部总线标准，又称为VL-BUS总线。所谓的局部总线，是指在系统外为两个以上的模块提供的高速传输信息通道。VL-BUS是由CPU总线演化而来的，采用CPU的时钟频率达33MHz，数据线为32位，可通过扩展插槽扩展到64位，配有局部控制器，最大传输速率达到133MBps。通过局部总线控制器，将高速I/O设备直接挂载在CPU上，实现CPU与高速I/O设备之间的高速数据交换
    >
 4. PCI总线
+
    > PCI总线是目前使用最为广泛的总线架构，ISA总线与EISA总线由于受带宽的限制，已经不能适应系统工作的系统要求，反倒成为了整个系统的瓶颈，从而促使了总线技术的发展。Intel提出了PCI(Peripheral Compoment Interconnect)
    > PCI的特点：
    >
@@ -69,6 +70,25 @@
    > 8. 可扩充性好，当PCI总线驱动能力不足时，可以采用多层结构
    > 9. 软件兼容性好
    > 10. 采用多路复用技术，减少了总线引脚个数
+   >
 5. AGP总线
-一种专门用于三维图形加速诞生的架构采用点对点通道方式，以66.7MHz的频率直接与主存联系，以主存为帧缓冲器，实现高速存取。
+  一种专门用于三维图形加速诞生的架构采用点对点通道方式，以66.7MHz的频率直接与主存联系，以主存为帧缓冲器，实现高速存取。
+6. RS-232C总线
+  RS-232C (RS Recommended Standard 的缩写， 232 为标识号， 表示修改次数）是由美 国电子工业协会 EIA (Electronic Industries Association) 推荐的一种串行通信总线标准，它是 应用千串行二进制交换的数据终端设备 (DTE) 和数据通信设备 (DCE) 之间的标准接口
 
+  DCE (Data Communication Equipment) 是数据通信设备，它实质是一个信号的匹配器，既能 满足 DTE 的要求，又能使传输信号符合线路要求。它具有提供数据终端设备与通信线路之间通 信的建立、维持和终止连接等功能，同时还执行信号变换与编码。它可以是一个 Modem （调制解 调器）。 DTE DCE 之间传输的是 “0” “1” 的数据，通过 RS-232C 接口规定的各种控制信号， 可实现两者之间的协调配合。
+
+7. USB总线
+
+  USB (Universal Serial Bus) 通用串行总线是 Compaq DEC IBM Intel, Microsoft NEC( 日本）和 Northern Telecom （加拿大）等七大公司于 1994 11 月联合开发的计算机串行接口总线标准， 1996 月颁布了 USB 1.0 版本。它基千通用连接技术，实现外设的简单快速连接，达到方便用 户、降低成本、扩展 PC 接连外设范围的目的。用户可以将几乎所有的外设装置，包括显示器、键 盘、鼠标、打印机、扫描仪、数码相机、 盘、词制解调器等直接插入标准 USB 插口。还可以将一 USB 外设进行串接，使一大串设备共用 PC 上的端口。
+
+  其特点如下：
+
+  1. 具有真正的即插即用特征。用户可以在不关机的情况下很方便地对外设实行安装和 拆卸，主机可按外设的增删情况自动配置系统资源，外设装置驱动程序的安装、删除均自动 实现
+  2. 具有很强的连接能力。使用 USB HUB(USB 集线器）实现系统扩展，最多可链式连接 127 个外设到同一系统。图 3.6 是典型的 USB 系统拓扑结构。标准 USB 电缆长度为 3m ，低速传输 方式时可为 ，通过 HUB 或中继器可使传输距离达 30m
+  3. 数据传输率 (USB 1.0 版）有两种，即采用普通无屏蔽双绞线，速度可达 1.5 Mbps ，若用带 屏蔽的双绞线，速度可达 12 Mbps USB 2.0 版的数据传输率最高可达 480 Mbps
+  4. 标准统一。 USB 的引入减轻了对目前 PC 中所有标准接口的需求，如串口的鼠标、键盘，并口的打印机、扫描仪， IDE 接口的硬盘，都可以改成以统一的 USB 标准接入系统，从而减少了 PC 插槽的需求，节省空间。
+  5. 连接电缆轻巧，电源体积缩小。 USB 使用的 芯电缆中的 条用于信号连接， 条用千电 源／地，可为外设提供＋5V 的直流电源，方便用户
+  6. ＠生命力强。 USB 是一种开放性的不具有专利版权的工业标准，它是由一个标准化组织 "USB 实施者论坛＂（该组织由 150 多家企业组成）制定出来的，因此不存在专利版权问题， USB 规范具有强大的生命力。
+
+  
